--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="class-a">Add A</button>
     <button id="class-b">Add B</button>
     <button id="class-c">Add C</button>
-    <button id="class-c">Add D</button>
+    <button id="class-d">Add D</button>
 
     <!-- Load index.js after the content of the page -->
     <script src="index.js"></script>
