--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="console"></div>
     <!-- Add an image that we will use to test -->
     <!--commented image -->
+    <center>
     <!--<img id="img" crossOrigin src="https://i.imgur.com/JlUvsxa.jpg" width=227 height=227/> -->
     <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
 
@@ -17,7 +18,7 @@
     <button id="class-b">Add B</button>
     <button id="class-c">Add C</button>
     <button id="class-d">Add D</button>
-
+    </center>
     <!-- Load index.js after the content of the page -->
     <script src="index.js"></script>
   </body>
